# Qwen3.5_0.8B_Deploy

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  README_EN.md  mlp_flow.mmd  vllm_batch_test.py
.github/workflows/: ci.yml
.trae/rules/auto-eval-gate/: RULE.md
.trae/skills/qwen-accuracy-validation/: SKILL.md
.trae/skills/qwen-performance-testing/: SKILL.md
.trae/skills/qwen-project-overview/: SKILL.md
.trae/skills/qwen-project-structure/: SKILL.md
batch_optimization/: README.md
batch_optimization/batch_128/include/: batch_config.cuh  paged_kv.hpp
batch_optimization/batch_16/include/: batch_config.cuh  fusion_microbench_kernels.cuh
batch_optimization/batch_32/include/: batch_config.cuh
batch_optimization/batch_64/include/: batch_config.cuh  cuda_engine_v3.hpp  gpu_sampler_argmax.hpp
batch_optimization/batch_8/include/: batch_config.cuh  flash_attention_int8.cuh
batch_optimization/batch_8/kernels/: batch_gemm_optimized.cu  kv_int8_cuda.cu
data/: prompt_protocol.md
docs/: README.md  latest_eval_summary.json  latest_eval_summary.md
docs/implementation/: CODE_ARCHITECTURE.md  accuracy_validation_methodology.md  batch_poc_benchmark.md  benchmark_automation_principle_and_implementation.md  bf16_prefill_benchmark.md  code_style_guide.md  cuda_flow_diagram.mmd  cuda_optimization_log.md  cuda_prefill_flow_v32.md  kv_int8_benchmark.md  latest_benchmark_summary.md  memory_optimization_report.md  paged_kv_benchmark.md  prefill_optimization_strategy.md  qwen3_5_0_8b_architecture.md
docs/memory_optimization/: lossless_optimization_analysis.md  lossy_optimization_analysis.md  memory_analysis_report.md  memory_consumption_analysis.md
docs/optimization/: PERFORMANCE_TEST_TEMPLATE.md  optimization_log_v2.1.md  prefill_bottleneck_analysis_v2.md  prefill_decode_balance_strategy.md
docs/qwen3_5_0_8b_details/: 00_总览与索引.md  01_总体架构_实现级流程.md  02_文本主干_24层调度与参数映射.md  03_LinearAttention_GatedDeltaNet_细节.md  04_FullAttention_GQA_RoPE_细节.md  05_MLP_层归一化_输出头.md  06_视觉编码器与Merger_细节.md  07_MTP分支与推测解码_参数加载.md
lossy_optimization/: README.md  TEST_GUIDE.md  run_all_performance_tests.sh  run_all_tests.sh  run_performance_tests.py
lossy_optimization/01_weight_bf16/: PERFORMANCE.md
lossy_optimization/01_weight_bf16/include/: cuda_error_handling.cuh  cuda_ops.cuh  flash_attention_int8.cuh  full_attention_cuda.hpp  fused_kernels.cuh  kv_int8_cuda.hpp  mlp_cuda.hpp
lossy_optimization/01_weight_bf16/kernels/: cuda_engine.cu  flash_attention_int8.cu  full_attention_cuda.cu  lm_head_cuda.cu  mlp_cuda.cu  token_embedding_cuda.cu  vision_patch_embedding_cuda.cu
lossy_optimization/01_weight_bf16/perf_reports_prefill1024_decode512_r3_20260429_233452/: summary.md
lossy_optimization/02_kv_cache_fp16/: PERFORMANCE.md  third_party
lossy_optimization/02_kv_cache_fp16/include/: cublas_handle_pool.hpp  cuda_utils.cuh  full_attention_cuda.hpp  fused_kernels.cuh  fusion_microbench_kernels.cuh  mlp_cuda.hpp
lossy_optimization/02_kv_cache_fp16/kernels/: cuda_engine_v3.cu  full_attention_cuda.cu  fused_kernels.cu  fusion_microbench_kernels.cu
lossy_optimization/03_kv_cache_int8/: PERFORMANCE.md
lossy_optimization/03_kv_cache_int8/include/: bf16_gemm.cuh  cuda_engine.hpp  cuda_utils.cuh  full_attention_cuda.hpp  lm_head_cuda.hpp
lossy_optimization/03_kv_cache_int8/kernels/: fa_wrapper.cpp  nvcc_smoke_test.cu
lossy_optimization/04_weight_int8/: PERFORMANCE.md
lossy_optimization/04_weight_int8/include/: full_attention_cuda.hpp
lossy_optimization/04_weight_int8/kernels/: cuda_engine_v3.cu  (+6 more)
lossy_optimization/05_weight_int4/: CMakeLists.txt
lossy_optimization/06_full_fp16/: tests
lossy_optimization/07_full_int8/: CMakeLists.txt
lossy_optimization/09_linear_to_flash/: CMakeLists.txt
scripts/: export_real_weights.py  format_code.ps1  get_config.py  get_rmsnorm_source.py  load_real_weights_test.py  npy_to_bin.py  npy_to_bin_debug.py  plot_kv_memory.py  test_rmsnorm.py  vision_patch_embedding_image_test.py  vision_patch_embedding_test.py
scripts/benchmark/: run_all_memory_benchmarks.ps1
scripts/common/: path_config.py
scripts/eval/: run_auto_eval.ps1
scripts/preprocess/: export_qwen35_image_processor_ref.py
scripts/weights/: export_all_hidden.py  export_corrected_hidden.py  export_detailed_layer0.py  export_embedding_weights.py  export_language_backbone_weights.py  export_layer7_data.py  export_mtp_weights.py  export_vit_weights.py  export_weights.py
tests/hallucination_harness/: README.md  harness_runner.cpp
tests/integration/: backbone_test.cpp  complete_inference_validate.cpp  cpu_benchmark.cpp  e2e_inference_test.cpp  e2e_validate.cpp  full_model_validate.cpp  multimodal_image_test.cpp  stage2_benchmark.cpp  test_layer_isolated.cpp  unified_error_report.cpp  v2_kernel_accuracy_validate.cu  validate_layer_by_layer.cpp  validate_layerwise_simple.cpp  vision_image_pipeline.cpp  vision_patch_embedding_trace.cpp  vision_transformer_trace.cpp
tests/tools/: cuda_op_flowchart_demo.cpp  cuda_pipeline_flowchart_demo.cpp
tests/unit/: test_backbone.cpp  test_flash_attention.cu  test_full_attn.cpp  test_kvcache.cpp  test_linear_attn.cpp  test_rmsnorm.cpp  test_rmsnorm.cu
(+130 files in other folders)
